Add data loading section to notebook with proper markdown formatting

--- a/notebook/product_category_analysis.ipynb
+++ b/notebook/product_category_analysis.ipynb
@@ -28,7 +28,7 @@
    "id": "7685ee0f",
    "metadata": {},
    "source": [
-    "Code (uvoz biblioteka i osnovne postavke)"
+    "## Code (uvoz biblioteka i osnovne postavke)"
    ]
   },
   {
@@ -68,6 +68,33 @@
     "\n",
     "# Stil za grafike\n",
     "sns.set(style=\"whitegrid\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5b24c4b",
+   "metadata": {},
+   "source": [
+    "## 1. Ucitavanje podataka\n",
+    "\n",
+    "Ucitavamo skup podataka `products.csv` koji se nalazi u folderu `../data/`\n",
+    "u odnosu na ovu radnu svesku (koja je smestena u `notebook/` direktorijumu).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e222bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Putanja do CSV fajla relativno u odnosu na notebook\n",
+    "data_path = os.path.join(\"..\", \"data\", \"products.csv\")\n",
+    "\n",
+    "df_raw = pd.read_csv(data_path)\n",
+    "\n",
+    "print(\"Dimenzije originalnog skupa:\", df_raw.shape)\n",
+    "df_raw.head()\n"
    ]
   }
  ],
