Update the info

--- a/notebook/product_category_analysis.ipynb
+++ b/notebook/product_category_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "1183bd04",
    "metadata": {},
    "source": [
-    "# Product Category Classification – Product Title Based ML Model\n",
+    "# 🧠 Product Category Classification – Product Title Based ML Model\n",
     "\n",
     "Ovaj notebook prikazuje kompletan tok rada za razvoj modela masinskog ucenja\n",
     "koji automatski predlaze kategoriju proizvoda na osnovu njegovog naslova\n",
@@ -28,7 +28,7 @@
    "id": "7685ee0f",
    "metadata": {},
    "source": [
-    "## Code (uvoz biblioteka i osnovne postavke)"
+    "## ⚙️ Uvoz biblioteka i osnovne postavke"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "id": "a5b24c4b",
    "metadata": {},
    "source": [
-    "## 1. Ucitavanje podataka\n",
+    "## 📚 Ucitavanje podataka\n",
     "\n",
     "Ucitavamo skup podataka `products.csv` koji se nalazi u folderu `../data/`\n",
     "u odnosu na ovu radnu svesku (koja je smestena u `notebook/` direktorijumu).\n"
@@ -105,7 +105,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.14.0"
   }
  },
