Add data inspection and cleaning sections to notebook

--- a/notebook/product_category_analysis.ipynb
+++ b/notebook/product_category_analysis.ipynb
@@ -96,6 +96,26 @@
     "print(\"Dimenzije originalnog skupa:\", df_raw.shape)\n",
     "df_raw.head()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63727ef2",
+   "metadata": {},
+   "source": [
+    "# 🔎 Struktura kolona, tipovi podataka, broj nedostajucih vrednosti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76377241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw.info()\n",
+    "print(\"\\nBroj nedostajućih vrednosti po kolonama:\")\n",
+    "print(df_raw.isna().sum())\n"
+   ]
   }
  ],
  "metadata": {
