Remove duplicate outputs from notebook

--- a/notebook/product_category_analysis.ipynb
+++ b/notebook/product_category_analysis.ipynb
@@ -621,6 +621,153 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a38f026d",
+   "metadata": {},
+   "source": [
+    "## 📁 Feature engineering\n",
+    "\n",
+    "Osnovni ulaz u model je tekstualni naslov proizvoda (`product_title`).\n",
+    "\n",
+    "Da bismo modelu dali više informacija, uvodimo dodatne feature-e:\n",
+    "\n",
+    "- `title_char_len` – broj karaktera u naslovu,\n",
+    "- `title_word_count` – broj reci u naslovu,\n",
+    "- `title_digit_count` – broj cifara u naslovu,\n",
+    "- `has_digits` – indikator da li naslov sadrzi bar jednu cifru,\n",
+    "- `has_upper_acronym` – indikator prisustva akronima (npr. USB, LED),\n",
+    "- `number_of_views` – (ako postoji) broj pregleda,\n",
+    "- `merchant_rating` – (ako postoji) ocena prodavca.\n",
+    "\n",
+    "Ovi feature-i ce biti kombinovani sa TF-IDF reprezentacijom teksta naslova.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d723f698",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_title</th>\n",
+       "      <th>title_char_len</th>\n",
+       "      <th>title_word_count</th>\n",
+       "      <th>title_digit_count</th>\n",
+       "      <th>has_digits</th>\n",
+       "      <th>has_upper_acronym</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>apple iphone 8 plus 64gb silver</td>\n",
+       "      <td>31</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>apple iphone 8 plus 64 gb spacegrau</td>\n",
+       "      <td>35</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>apple mq8n2b/a iphone 8 plus 64gb 5.5 12mp sim...</td>\n",
+       "      <td>70</td>\n",
+       "      <td>13</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>apple iphone 8 plus 64gb space grey</td>\n",
+       "      <td>35</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>apple iphone 8 plus gold 5.5 64gb 4g unlocked ...</td>\n",
+       "      <td>54</td>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       product_title  title_char_len  \\\n",
+       "0                    apple iphone 8 plus 64gb silver              31   \n",
+       "1                apple iphone 8 plus 64 gb spacegrau              35   \n",
+       "2  apple mq8n2b/a iphone 8 plus 64gb 5.5 12mp sim...              70   \n",
+       "3                apple iphone 8 plus 64gb space grey              35   \n",
+       "4  apple iphone 8 plus gold 5.5 64gb 4g unlocked ...              54   \n",
+       "\n",
+       "   title_word_count  title_digit_count  has_digits  has_upper_acronym  \n",
+       "0                 6                  3           1                  0  \n",
+       "1                 7                  3           1                  0  \n",
+       "2                13                  9           1                  0  \n",
+       "3                 7                  3           1                  0  \n",
+       "4                11                  6           1                  0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Duzina naslova u karakterima\n",
+    "df[\"title_char_len\"] = df[\"product_title\"].str.len()\n",
+    "\n",
+    "# Broj reci u naslovu\n",
+    "df[\"title_word_count\"] = df[\"product_title\"].str.split().str.len()\n",
+    "\n",
+    "# Broj cifara u naslovu\n",
+    "df[\"title_digit_count\"] = df[\"product_title\"].str.count(r\"\\d\")\n",
+    "\n",
+    "# Da li naslov sadrzi cifru (0/1)\n",
+    "df[\"has_digits\"] = (df[\"title_digit_count\"] > 0).astype(int)\n",
+    "\n",
+    "# Da li sadrzi akronim velikim slovima (npr. USB, LED, UHD...)\n",
+    "df[\"has_upper_acronym\"] = df[\"product_title\"].str.contains(r\"\\b[A-Z]{2,}\\b\", regex=True).astype(int)\n",
+    "\n",
+    "df[[\"product_title\", \"title_char_len\", \"title_word_count\", \"title_digit_count\", \"has_digits\", \"has_upper_acronym\"]].head()\n"
+   ]
   }
  ],
  "metadata": {
