Update notebook description

--- a/notebook/product_category_analysis.ipynb
+++ b/notebook/product_category_analysis.ipynb
@@ -130,7 +130,7 @@
     "- fokus je na `Product Title` kao glavnom tekstualnom feature-u,\n",
     "- `Category Label` je ciljna promenljiva,\n",
     "- dodatne kolone (`Number_of_Views`, `Merchant Rating`, datum) mozemo koristiti\n",
-    "  kao numeričke feature-e nakon obrade.\n",
+    "  kao numericke feature-e nakon obrade.\n",
     "\n",
     "U nastavku vrsimo:\n",
     "- preimenovanje kolona u dosledan format,\n",
@@ -276,7 +276,7 @@
     "\n",
     "Osnovni ulaz u model je tekstualni naslov proizvoda (`product_title`).\n",
     "\n",
-    "Da bismo modelu dali više informacija, uvodimo dodatne feature-e:\n",
+    "Da bismo modelu dali vise informacija, uvodimo dodatne feature-e:\n",
     "\n",
     "- `title_char_len` – broj karaktera u naslovu,\n",
     "- `title_word_count` – broj reci u naslovu,\n",
@@ -484,7 +484,7 @@
     "## 📊 Izbor finalnog modela\n",
     "\n",
     "Na osnovu dobijenih rezultata biramo model sa najboljom tacnoscu na test skupu.\n",
-    "U nastavku ćemo:\n",
+    "U nastavku cemo:\n",
     "\n",
     "- izdvojiti najbolji model,\n",
     "- detaljnije analizirati njegovu konfuzionu matricu,\n",
@@ -570,7 +570,7 @@
     "\n",
     "joblib.dump(final_pipeline, model_path)\n",
     "\n",
-    "print(f\"Finalni pipeline sačuvan u fajl: {model_path}\")\n"
+    "print(f\"Finalni pipeline sacuvan u fajl: {model_path}\")\n"
    ]
   },
   {
